--- a/index.html
+++ b/index.html
@@ -11,16 +11,29 @@
 
 <body>
   <div class="banner"> 
-   
-    <!-- место для изображения -->
+   <img src="./logo.svg" alt="museum logo">
   </div>
   <nav class="navbar">
-    <a href="">Museen & Einrichtungen</a>
-    <a href="">Forschung</a>
-    <a href="">Ausstellungen</a>
-    <a href="">Bildung & Vermittlung</a>
-    <a href="">Veranstaltungen</a>
-    <a href="">Besuch planen</a>
+    <ul class="nav-elements">
+      <li class="link-item">
+        <a href="">Museen & Einrichtungen</a>
+      </li>
+      <li class="link-item">
+        <a href="">Forschung</a>
+      </li>
+      <li class="link-item">
+        <a href="">Ausstellungen</a>
+      </li>
+      <li class="link-item">
+        <a href="">Bildung & Vermittlung</a>
+      </li>
+      <li class="link-item">
+        <a href="">Veranstaltungen</a>
+      </li>
+      <li class="link-item">
+        <a href="">Besuch planen</a>
+      </li>
+    </ul>
   </nav>
   <main>
 
